# ubsstock

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json
apps/api/: .env.example  Dockerfile  README.md  alembic.ini  app.py  pyproject.toml  requirements.txt  vercel.json
apps/api/api/: index.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial_schema.py  0002_refresh_job_names.py  0003_fundamentals_real_fields.py  0004_valuation_snapshot_currency.py  0005_announcements_metadata.py
apps/api/src/china_outbound_analyzer/: cli.py  main.py
apps/api/src/china_outbound_analyzer/api/: router.py
apps/api/src/china_outbound_analyzer/core/: config.py  database.py
apps/api/src/china_outbound_analyzer/models/: __init__.py  entities.py  enums.py
apps/api/src/china_outbound_analyzer/repositories/: stock_repository.py
apps/api/src/china_outbound_analyzer/schemas/: common.py  compare.py  compare_views.py  dashboard.py  jobs.py  metadata.py  recommendations.py  stock_views.py  stocks.py
apps/api/src/china_outbound_analyzer/seeds/: universe.py
apps/api/src/china_outbound_analyzer/services/adapters/: base.py
apps/api/src/china_outbound_analyzer/services/ai/: competition_artifacts.py  (+3 more)
apps/api/tests/: test_ai_analysis_artifacts.py  test_announcements_refresh.py  test_api.py  test_config.py  test_cron_endpoints.py  test_database_config.py  test_fundamentals_refresh.py  test_live_ai_analysis.py  test_migration_enums.py  test_news_refresh.py  test_price_refresh.py  test_scheduler.py  test_scoring.py  test_vercel_config.py
(+72 files in other folders)
